<resources>
    <string name="app_name">Grupo10_Proyecto01</string>
    <!-- activity_gestion_usuario_menu -->
    <string name="gestion_usuario">Gestión de usuarios</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="actualizar_informacion">Actualizar información</string>
    <string name="detalles_de_usuario">Detalles de usuario</string>

    <!-- activity_usuario_insertar -->
    <string name="crear_usuario_1">Crear usuario</string>
    <string name="inserte_nombre_usuario">Inserte el nombre de usuario</string>
    <string name="inserte_la_contraseña">Inserte la contraseña</string>
    <string name="inserte_de_nuevo_contraseña">Inserte de nuevo la contraseña</string>
    <string name="seleccione_tipo_cuenta">Seleccione el tipo de cuenta</string>
    <string name="registrar_usuario_1">Registrar usuario</string>

    <!-- Gestión Usuario Listado Actualizar Activity -->
    <string name="actualizar_info_usuario">Actualizar información del usuario</string>
    <string name="seleccione_usuario">Seleccione al usuario</string>
    <string name="actualizar_info">Actualizar información</string>

    <!-- Gestión Usuario Listado Actualizar Activity -->
    <string name="consultar_info_usuario">Consultar información de los usuarios</string>
    <string name="consutar_info">Consultar información</string>

    <!-- activity_usuario_insertar -->
    <string name="actualizar_info_de">Actualizar información de</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">e-mail</string>
    <string name="telefono">Teléfono</string>
    <string name="nip">NIP</string>
    <string name="seleccione_su_categoria_docente">Seleccione su categoría de docente</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <!-- activity_usuario_insertar -->
    <string name="consultar_info_de">Consultando la información de</string>
    <string name="categoria">Categoria</string>

    <!--Strings para Evento Especial Activity-->
    <string name="txtViewNombreEventoEspecial">Nombre del evento:</string>
    <string name="txtViewTipoEventoEspecial">Tipo de evento especial:</string>
    <string name="txtViewEdificioEventoEspecial">Edificio:</string>
    <string name="txtViewLocalidadEventoEspecial">Localidad:</string>
    <string name="txtViewFechaEventoEspecial">Fecha:</string>
    <string name="txtViewSeleccionarHorarioEventoEspecial">Seleccione horario:</string>
    <string name="btnCrearEventoEspecial">Crear</string>
    <string name="btnCancelarEventoEspecial">Cancelar</string>
    <string name="btnActualizarEventoEspecial">Actualizar</string>
    <string name="btnVolverEventoEspecial">Volver</string>
    <string-array name="spinnerHorariosEventoEspecial">
        <item>Horario 1</item>
        <item>Horario 2</item>
        <item>Horario 3</item>
        <item>Horario 4</item>
        <item>Horario 5</item>
        <item>Horario 6</item>
        <item>Horario 7</item>
        <item>Horario 8</item>
    </string-array>

    <!--Strings para Main Activity-->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="logo_de_inicio_de_sesi_n">Logo de inicio de sesión</string>

    <!--Strings para MenuPrincipal Activity-->
    <string name="menuprincipal">Menú Principal</string>
    <string name="bienvenida">Bienvenido,</string>
    <string name="mp_opcion01">Perfil de usuario</string>
    <string name="mp_opcion02">Gestionar propuestas generales</string>
    <string name="mp_opcion03">Gestionar propuestas de eventos</string>
    <string name="mp_opcion04">Revisar propuestas</string>
    <string name="mp_opcion05">Gestionar evento especial</string>
    <string name="logout">Cerrar sesión</string>

    <!--Strings para UsuarioPerfil Activity-->
    <string name="nombre_perfil">Nombre</string>
    <string name="email_perfil">Correo electrónico</string>
    <string name="telefono_perfil">Teléfono</string>
    <string name="categoria_perfil">Categoría</string>

    <!--Strings para DocenteMenuCiclo Activity-->
    <string name="txtViewCicloInstrucciones">Selecciona ciclo a gestionar</string>
    <string name="txtViewCicloTitulo">Ciclos</string>

    <!--Strings para DocenteMenuMateria Activity-->
    <string name="txtViewMateriaTitulo">Materias Asignadas</string>
    <string name="txtViewMateriaInstrucciones">Seleccione la materia a gestionar</string>

    <!--Strings para DocentePropuestaGeneral Activity-->
    <string name="txtViewPropuestaTitulo">Propuesta General []</string>
    <string name="txtViewPropuestaCodMateria">Código de Materia:</string>
    <string name="txtViewPropuestaEstado">Estado:</string>
    <string name="txtViewPropuestasEspecificas">Propuestas Específicas:</string>
    <string name="btnPropuestaAgregar">Agregar</string>

    <!--Strings para DocentePropuestaEspecificaInsertar&Detallada Activity-->
    <string name="txtViewPropuestaEspecificaTitulo">Propuesta Específica []</string>
    <string name="txtViewPropuestaEspecificaEdificio">Edificio:</string>
    <string name="txtViewPropuestaEspecificaTipoGrupo">Tipo:</string>
    <string name="txtViewPropuestaEspecificaCupo">Cupo:</string>
    <string name="txtViewPropuestaEspecificaLocal">Local:</string>
    <string name="txtViewPropuestaEspecificaNGrupo">N° Grupo:</string>
    <string name="txtViewPropuestaEspecificaCapacidad">Capacidad:</string>
    <string name="txtViewPropuestaEspecificaDia">Dia:</string>
    <string name="txtViewPropuestaEspecificaHorario">Horario:</string>
    <string name="txtViewPropuestaEspecificaMateria">Materia:</string>
    <string name="btnPropuestaEspecificaGuardar">Guardar</string>
    <string name="txtViewPropuestaEspecificaEstado">Estado:</string>
    <string name="txtViewPropuestaEspecificaDocente">Coordinador:</string>
    <string name="txtViewDocentePropuestaEstado1">Aprobado</string>
    <string name="txtViewDocentePropuestaEstado2">En revision</string>
    <string name="txtViewDocentePropuestaEstado3">Denegado</string>
    <string name="txtViewDocentePropuestaEstado4">Requiere cambios</string>
    <string name="btnPropuestaEspecificaEliminar">Eliminar</string>
    <string name="btnPropuestaEspecificaActualizar">Actualizar</string>

    <!--Strings para Secretaria Activity-->
    <string name="btnSecretarioRevisar">Revisar</string>
    <string name="btnEncargadoRevisar">Revisar</string>
    <string name="btnSecretarioAprobar">Aprobar</string>
    <string name="btnSecretarioDenegar">Denegar</string>
    <string name="btnEncargadoAprobar">Aprobar</string>
    <string name="btnEncargadoDenegar">Denegar</string>

    <!--Strings para EventoEspecialMeuActivity-->
    <string name="txtViewCrearEventoEspecial">Crear evento especial</string>
    <string name="txtViewActualizarEventoEspecial">Actualizar evento especial</string>
    <string name="txtViewDetalleEventoEspecial">Ver detalle evento especial</string>
    <string name="headerEventoEspcial">Evento especial</string>
</resources>