<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventoEspecialDetalleActivity">

  <TextView
      android:id="@+id/editTextNombreDetalleEventoEspecial"
      android:layout_width="271dp"
      android:layout_height="53dp"
      android:layout_marginTop="60dp"
      android:ems="10"
      android:inputType="none"
      android:text="@string/txtViewNombreEventoEspecial"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.35"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/editTextFechaDetalleEventoEspecial"
      android:layout_width="267dp"
      android:layout_height="54dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:inputType="none"
      android:text="@string/txtViewFechaEventoEspecial"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.34"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextLocalidadDetalleEventoEspecial" />

  <Spinner
      android:id="@+id/spinnerHorarioDetalleEventoEspecial"
      android:layout_width="179dp"
      android:layout_height="48dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="52dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextFechaDetalleEventoEspecial" />

  <TextView
      android:id="@+id/editTextTipoDetalleEventoEspecial"
      android:layout_width="270dp"
      android:layout_height="53dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:inputType="none"
      android:text="@string/txtViewTipoEventoEspecial"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.34"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextNombreDetalleEventoEspecial" />

  <Button
      android:id="@+id/btnVolverDetalleEventoEspecial"
      android:layout_width="130dp"
      android:layout_height="48dp"
      android:layout_marginTop="46dp"
      android:backgroundTint="@color/purple_700"
      android:text="@string/btnVolverEventoEspecial"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/spinnerHorarioDetalleEventoEspecial"
      app:layout_constraintVertical_bias="0.012" />

  <TextView
      android:id="@+id/editTextLocalidadDetalleEventoEspecial"
      android:layout_width="266dp"
      android:layout_height="49dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:inputType="none"
      android:text="@string/txtViewLocalidadEventoEspecial"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.331"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEdificioDetalleEventoEspecial" />

  <TextView
      android:id="@+id/textViewSeleccionarHorarioDetalleEventoEspecial"
      android:layout_width="103dp"
      android:layout_height="55dp"
      android:layout_marginTop="48dp"
      android:text="@string/txtViewSeleccionarHorarioEventoEspecial"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/spinnerHorarioDetalleEventoEspecial"
      app:layout_constraintHorizontal_bias="0.87"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextFechaDetalleEventoEspecial"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/editTextEdificioDetalleEventoEspecial"
      android:layout_width="270dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:inputType="none"
      android:text="@string/txtViewEdificioEventoEspecial"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.347"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTipoDetalleEventoEspecial" />
  </androidx.constraintlayout.widget.ConstraintLayout>