<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147sp"
        android:layout_marginEnd="147sp"
        android:layout_marginBottom="39sp"
        android:text="@string/seleccione_usuario"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lista_usuarios_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_usuarios_recyclerView"
        android:layout_width="313sp"
        android:layout_height="400sp"
        android:layout_marginStart="72sp"
        android:layout_marginEnd="72sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/consultar_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/consultar_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184sp"
        android:layout_marginEnd="184sp"
        android:layout_marginBottom="68sp"
        android:text="@string/consutar_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="29dp"
        android:text="@string/consultar_info_de"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>